移除对BASE64Decoder类的使用